--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Flask==3.1.1
-Requests==2.32.4
+Flask==3.1.2
+flask_wtf==1.2.2
+holidays==0.78
+python-dotenv==1.1.1
+Requests==2.32.5
 Werkzeug==3.1.3
 zipcodes==1.3.0
